# HistoSSLscaling

./: CODEOWNERS  LICENSE.txt  README.md  conf.yaml  install.sh  pylintrc  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
assets/: example.tif
conf/extract_features/: slide_config.yaml  tile_config.yaml
dev_tools/: linting.sh  run_tests.sh
notebooks/: phikon_tutorial.ipynb
rl_benchmarks/: README.md  __init__.py  constants.py
rl_benchmarks/datasets/: __init__.py
rl_benchmarks/losses/: __init__.py  bce_with_logits_loss.py  cox_loss.py  cross_entropy_loss.py
rl_benchmarks/metrics/: __init__.py  classification_metrics.py  survival_metrics.py
rl_benchmarks/models/: __init__.py
rl_benchmarks/trainers/: __init__.py  base_trainer.py  torch_trainer.py  utils.py
rl_benchmarks/utils/: __init__.py  cross_validation.py  features.py  functional.py  linear_evaluation.py  loading.py  logging.py  serialization.py  testing.py
rl_benchmarks/val_schemes/: __init__.py  nested_cross_validation.py  utils.py
scripts/: extract_slide_features.sh  extract_tile_features.sh  slides_classification.sh  tiles_classification.sh
tests/: conftest.py  test_constants.py
tests/datasets/: test_features_loading.py  test_slides_and_images_loading.py
tests/losses/: test_losses.py
tests/models/: __init__.py  test_feature_extractors.py  test_slide_models.py
tests/val_schemes/: test_utils.py  test_val_schemes.py
tools/extract_features/: __init__.py  extract_slide_features.py  extract_tile_features.py
tools/slide_level_tasks/: __init__.py  cross_validation.py  (+1 more)
(+66 files in other folders)
