[metadata]
license_files = LICENSE.txt

[flake8]
exclude=
    # Git
    .git,
    # Bytecode
    __pycache__,
    # __init__
    __init__.py
ignore=python
    # check ignored by default in flake8. Meaning unclear
    E24,
    # space before : (needed for how black formats slicing)
    E203,
    # do not assign a lambda expression, use a def
    E731,
    # do not use variables named 'l', 'O', or 'I'
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504,
    # line too long
    E501,